# GLPS

./: .gitignore  .gitmodules  CMakeLists.txt  gooeydocs_gen.py  readme.md
.cache/clangd/index/: dr_mp3.h.CCF29121200A9985.idx  glps_audio_stream.c.1B58F34658F2BA94.idx  glps_audio_stream.h.1482B6963B470F79.idx  glps_common.h.4C03ADF39B6A780F.idx  glps_egl_context.c.8A8A4F0DB34B25B6.idx  glps_egl_context.h.EACC858BDD6B6811.idx  glps_thread.c.87E9619420A6C12A.idx  glps_thread.h.9D30AB139791FAA5.idx  glps_timer.c.540BAB9A2B331B4D.idx  glps_timer.h.E9F49C2C81944FA7.idx  glps_window_manager.c.1BC2FAF428B89AA3.idx  glps_window_manager.h.C452CC33FD376BA8.idx  glps_x11.c.DEE82E50458BBC64.idx  glps_x11.h.E00ECA841AD22AC1.idx  pico_logger.c.3F0FD2AC735E6A35.idx  pico_logger.h.72F32E50AA1DFE0A.idx
examples/: 3d_cam.c  3d_cube.c  audio  audio_test  audio_test.c  frag.spv  index.html  test  test.c  test_x11.sh  vert.spv  vulkan.c  x11_window  x11_window.c
include/: glps_audio_stream.h  glps_mqtt_client.h  glps_thread.h  glps_timer.h  glps_window_manager.h
internal/: glps_common.h  glps_threads.h  glps_wayland.h  glps_win32.h  glps_x11.h
internal/xdg/: wlr-data-control-unstable-v1.h  xdg-decorations.h  xdg-toplevel-tag.h
scripts/: alsa.sh  install_wpe_deps.sh  waylandProtolcsInst.sh
src/: glps_audio_stream.c  glps_egl_context.c  glps_mqtt_client.c  glps_thread.c  glps_threads.c  glps_timer.c  glps_wayland.c  glps_win32.c  glps_window_manager.c  glps_x11.c
src/utils/logger/: pico_logger.c
src/xdg/: wlr-data-control-unstable-v1.c  xdg-toplevel-tag.c
website/: glps.html  index.html
website/docs/: index.html  search_index.json
